<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Compass + GPS</string>
    
    <string name="compass">Compass</string>
    
    <string name="GPS">GPS</string>
    <string name="degrees">Degrees</string>
    <string name="lat">Lat</string>
    <string name="lon">Lon</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="GPS_settings">GPS Settings</string>
    <string name="viewinmap">View in Map</string>
    <string name="viewusing">View using…</string>
    <string name="sharelocation">Share location via…</string>
    <string name="share_imat">I\'m at</string>
    <string name="viewlocation">Here I am</string>
    <string name="waitingacquire">Location not detected. Enable GPS and wait for a valid location…</string>
    <string name="gpsstatus">GPS Status</string>
    <string name="gpsstatus_ok">Available</string>
    <string name="gpsstatus_temp">Temporarily unavailable</string>
    <string name="gpsstatus_out">Out of service</string>
    
    <string name="dialog_title">Enable GPS</string>
    <string name="dialog_text">In order to retrieve location, we need you to enable \'GPS satellites\' under \'Location sources\' in your device\'s settings.</string>
    <string name="dialog_dontshow">Do not show again</string>
    
    <string name="title_activity_about">About…</string>
    <string name="about_designedby">designed by</string>
    <string name="about_from">from</string>
    
    <string name="separator">Separator</string>
    <string name="optYES">YES</string>
    <string name="optNO">NO</string>
    <string name="skip">Skip</string>
    
    <string name="title_activity_settings">Settings</string>

</resources>