<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lytGlobalLayout"
    style="?android:attr/listViewStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:keepScreenOn="true"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:id="@+id/lytCompass"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/lblCompassTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/compass"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/lytCompassContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/imgCompass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:contentDescription="@string/compass"
                android:padding="10dp"
                android:src="@drawable/compass" />

            <ImageView
                android:id="@+id/imgUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/lblCompassGeo"
                android:layout_centerHorizontal="true"
                android:src="@drawable/up" />

            <TextView
                android:id="@+id/lblCompassDegrees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textIsSelectable="false" />

            <TextView
                android:id="@+id/lblCompassGeo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/lblCompassDegrees"
                android:layout_centerHorizontal="true"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textIsSelectable="false" />

            <TextView
                android:id="@+id/lblCompassDeclination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lblCompassDegrees"
                android:layout_centerHorizontal="true"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textIsSelectable="false" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:id="@+id/lytGPS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/lytGPSTitleOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lblGPSTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/GPS"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />
            
            <RelativeLayout
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:layout_centerVertical="true"
	            android:layout_toLeftOf="@+id/tgbGPSToggle" >
            	
                <TextView
	                android:id="@+id/lblGPSStatus"
	                android:text="@string/GPSstatusbullet"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_centerInParent="true"
	                android:visibility="invisible"
	                android:textAppearance="?android:attr/textAppearanceLarge"
	                android:textStyle="bold"
	                android:layout_marginLeft="5dp" />
	
	            <ProgressBar
	                android:id="@+id/pgbLoading"
	                android:layout_centerInParent="true"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:visibility="invisible" />
            	
            </RelativeLayout>

            <ToggleButton
                android:id="@+id/tgbGPSToggle"
                android:textOn="@string/optYES"
                android:textOff="@string/optNO"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:button="@drawable/satellite"
                android:onClick="toggleGPS"
                android:text="@string/GPS" />

        </RelativeLayout>

        <TableLayout
            android:id="@+id/lytGPSData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dividerPadding="10dp" >

            <TableRow
                android:id="@+id/tbrGPSLat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dividerPadding="10dp" >

                <TextView
                    android:id="@+id/lblGPSLatLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/lat"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/lblGPSLatNS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text=""
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/lblGPSLatContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text=""
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </TableRow>

            <TableRow
                android:id="@+id/tbrGPSLon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dividerPadding="10dp" >

                <TextView
                    android:id="@+id/lblGPSLonLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/lon"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/lblGPSLonWE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text=""
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/lblGPSLonContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text=""
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</LinearLayout>